--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+.wrapper {
+  padding: 2%;
+}
+
 .banner {
   height: 50px;
   background-color: var(--red1);
@@ -14,8 +18,21 @@
   margin-left: 1%;
 }
 
+@keyframes rotate-logo {
+  from {
+    transform: rotate(0);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 .logo {
   margin-left: -9%;
+}
+
+.logo:hover {
+  animation: rotate-logo 3s linear infinite;
 }
 
 .flex-cont {
